--- a/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccPrimTests.tt
+++ b/VIENNAAddInUnitTests/upcc3/newrepo/upcc/UpccPrimTests.tt
@@ -2,39 +2,134 @@
 <#@ output extension=".cs" #>
 <#@ assembly name="Upcc.dll" #>
 <#@ assembly name="VIENNAAddInUtils.dll" #>
+<#@ assembly name="System.Core.dll" #>
+<#@ import namespace="System.Linq" #>
 <#@ import namespace="Upcc"#>
 <#@ import namespace="VIENNAAddInUtils.t4"#>
-<#@ import namespace="System.Text"#>
-using CctsRepository.PrimLibrary;
-using Moq;
+<#@ import namespace="VIENNAAddInUtils"#>
+<# 
+	var metaClassifier = MetaModel.Prim;
+	var extendManually = false;
+#>
+<#
+	var library = MetaModel.GetPackageRelationsFor(metaClassifier).First().PackageType;
+	var umlClassifierType = metaClassifier.GetType().Name.Substring(4);
+	var classifier = metaClassifier.Name.FirstCharToLowerCase();
+#>
+using CctsRepository.<#= library.Name #>;
 using NUnit.Framework;
 using NUnit.Framework.SyntaxHelpers;
 using VIENNAAddIn.upcc3.ccts.util;
-using VIENNAAddInUnitTests.upcc3.newrepo.upcc.uml;
 
 namespace VIENNAAddInUnitTests.upcc3.newrepo.upcc
 {
     [TestFixture]
-    public partial class UpccPrimTests
+    public <#= extendManually ? "partial " : "" #>class Upcc<#= metaClassifier.Name #>Tests
     {
-<#
-	foreach (var metaTaggedValue in MetaModel.Prim.TaggedValues)
-	{
-#>
-
         [Test]
-        public void ShouldReturnAnEmptyStringIfTaggedValue<#= metaTaggedValue.AsPropertyName() #>IsNull()
+        public void ShouldReturnId()
         {
-            IUmlDataType primUmlDataType = new UmlDataTypeBuilder().Build();
-            IPrim prim = new UpccPrim(primUmlDataType);
-            Assert.That(prim.<#= metaTaggedValue.AsPropertyName() #>, Is.Empty);
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .WithId(7)
+                .Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+            Assert.That(<#= classifier #>.Id, Is.EqualTo(uml<#= umlClassifierType #>.Id));
         }
 
         [Test]
-        public void ShouldReturnValueOfTaggedValue<#= metaTaggedValue.AsPropertyName() #>()
+        public void ShouldReturnName()
         {
-            IUmlDataType primUmlDataType = new UmlDataTypeBuilder()
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .WithName("aName")
+                .Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+            Assert.That(<#= classifier #>.Name, Is.EqualTo(uml<#= umlClassifierType #>.Name));
+        }
+
+	    [Test]
+        public void ShouldReturn<#= library.Name #>()
+        {
+            var umlPackage = new UmlPackageBuilder()
+                .WithId(6)
+                .Build();
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .WithPackage(umlPackage)
+                .Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+            Assert.That(<#= classifier #>.<#= library.Name #>, Is.Not.Null);
+            Assert.That(<#= classifier #>.<#= library.Name #>.Id, Is.EqualTo(umlPackage.Id));
+        }
+<# 
+		foreach (var dependency in MetaModel.GetDependenciesFor(metaClassifier))
+		{
+#>
+
+        [Test]
+        public void ShouldResolve<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>Dependency()
+        {
+            var targetUml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .WithId(5)
+                .Build();
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .WithDependencies(Stereotype.<#= dependency.Stereotype #>, targetUml<#= umlClassifierType #>)
+                .Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+            Assert.That(<#= classifier #>.<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>.Id, Is.Not.Null);
+            Assert.That(<#= classifier #>.<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>.Id, Is.EqualTo(targetUml<#= umlClassifierType #>.Id));
+        }
+
+        [Test]
+        public void ShouldResolveFirstOfMultiple<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>Dependencies()
+        {
+            var targetUml<#= umlClassifierType #>1 = new Uml<#= umlClassifierType #>Builder()
+                .WithId(5)
+                .Build();
+            var targetUml<#= umlClassifierType #>2 = new Uml<#= umlClassifierType #>Builder()
+                .WithId(6)
+                .Build();
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .WithDependencies(Stereotype.<#= dependency.Stereotype #>, targetUml<#= umlClassifierType #>1, targetUml<#= umlClassifierType #>2)
+                .Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+            Assert.That(<#= classifier #>.<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>.Id, Is.Not.Null);
+            Assert.That(<#= classifier #>.<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>.Id, Is.EqualTo(targetUml<#= umlClassifierType #>1.Id));
+        }
+
+        [Test]
+        public void ShouldResolveNull<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>DependencyToNull()
+        {
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+                .Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+            Assert.That(<#= classifier #>.<#= dependency.Stereotype.ToString().FirstCharToUpperCase() #>, Is.Null);
+        }
 <#
+		}
+#>
+
+		[Test]
+        public void ShouldReturnEmptyValuesForNullTaggedValues()
+        {
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder().Build();
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+<#
+	foreach (var metaTaggedValue in metaClassifier.TaggedValues)
+	{
+#>
+            Assert.That(<#= classifier #>.<#= metaTaggedValue.AsPropertyName() #>, Is.Not.Null);
+            Assert.That(<#= classifier #>.<#= metaTaggedValue.AsPropertyName() #>, Is.Empty);
+<#
+	}
+#>
+        }
+
+        [Test]
+        public void ShouldReturnValueOfTaggedValues()
+        {
+            var uml<#= umlClassifierType #> = new Uml<#= umlClassifierType #>Builder()
+<#
+	foreach (var metaTaggedValue in metaClassifier.TaggedValues)
+	{
 		if (metaTaggedValue.Cardinality == MetaCardinality.Many)
 		{
 #>
@@ -47,26 +142,29 @@ namespace VIENNAAddInUnitTests.upcc3.newrepo.upcc
                 .WithTaggedValue(TaggedValues.<#= metaTaggedValue.Name #>, "<#= metaTaggedValue.Name #>_Value")
 <#
 		}
+	}
 #>
                 .Build();
-            IPrim prim = new UpccPrim(primUmlDataType);
+            I<#= metaClassifier.Name #> <#= classifier #> = new Upcc<#= metaClassifier.Name #>(uml<#= umlClassifierType #>);
+<#
+	foreach (var metaTaggedValue in metaClassifier.TaggedValues)
+	{
+#>
 <#
 		if (metaTaggedValue.Cardinality == MetaCardinality.Many)
 		{
 #>
-            Assert.That(prim.<#= metaTaggedValue.AsPropertyName() #>, Is.EquivalentTo(new[] {"<#= metaTaggedValue.Name #>_Value1", "<#= metaTaggedValue.Name #>_Value2"}));
+            Assert.That(<#= classifier #>.<#= metaTaggedValue.AsPropertyName() #>, Is.EquivalentTo(new[] {"<#= metaTaggedValue.Name #>_Value1", "<#= metaTaggedValue.Name #>_Value2"}));
 <#
 		}
 		else
 		{
 #>
-            Assert.That(prim.<#= metaTaggedValue.AsPropertyName() #>, Is.EqualTo("<#= metaTaggedValue.Name #>_Value"));
+            Assert.That(<#= classifier #>.<#= metaTaggedValue.AsPropertyName() #>, Is.EqualTo("<#= metaTaggedValue.Name #>_Value"));
 <#
 		}
-#>
-        }
-<#
 	}
 #>
+        }
     }
 }
